# telebot-assistant

./: .gitignore  README.md  docker-compose.yml  impromptu  index.js  package-lock.json  package.json  prisma.config.js
data-processor/: README.md  config.py  database.py  logger.py  main.py  pyproject.toml
data-processor/routers/: data_router.py
data-processor/services/: data_service.py
telebot/prisma/: schema.prisma
telebot/src/: ai.js  app.js  prisma.js
telebot/src/ai/: index.js
telebot/src/ai/parsers/: databaseParser.js  intentParser.js  taskParser.js
telebot/src/ai/reminder/: addReminderAi.js  getReminderAi.js
telebot/src/ai/reminders/: addReminderAi.js  getReminderAi.js
telebot/src/ai/tasks/: readTaskParser.js
telebot/src/handlers/: dataWarehouseHandler.js  index.js  reminderHandler.js  startHandler.js  testFastApiHandler.js  textHandler.js
telebot/src/handlers/databases/: addDatabaseHandler.js
telebot/src/handlers/documents/: uploadDocumentHandler.js
telebot/src/handlers/reminder/: addReminderHandler.js  completeActionHandler.js  getReminderHandler.js  snoozeActionHandler.js
telebot/src/handlers/reminders/: addReminderHandler.js  completeActionHandler.js  getReminderHandler.js  snoozeActionHandler.js
telebot/src/jobs/: reminder.js
telebot/src/logger/: logger.js
telebot/src/middlewares/: chatLogger.js
telebot/src/services/: chatService.js  databaseService.js  documentService.js  reminderService.js  taskService.js  userService.js
telebot/src/utils/: crypto.js  formatter.js  messageParser.js
(+3 files in other folders)
