[project]
name = "data-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "pandas>=2.3.3",
    "clickhouse-connect>=0.8.20",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.48",
    "python-dotenv>=1.0.1",
    "pyarrow>=23.0.1",
    "minio>=7.2.20",
    "deltalake>=1.5.0",
    "matplotlib>=3.10.0",
    "cuid2>=2.0.0",
]
